--- a/frappe/public/less/chat.less
+++ b/frappe/public/less/chat.less
@@ -290,7 +290,7 @@
         {
             .btn
             {
-                   background: white;
+                background: @modal-header;
                 border-radius: 0px;
             }
         }
@@ -329,7 +329,7 @@
 
             .standard-image
             {
-                background-color: white;
+                background-color: @modal-header;
             }
         }
 
@@ -362,7 +362,7 @@
                 }
 
                 // background-color: @chat-bubble-l-color;
-                background-color: white;
+                background-color: @modal-header;
 
                 .chat-bubble-meta
                 {
@@ -430,13 +430,13 @@
 
 .chat-list-notification-content
 {
-    color: white;
-    background-color: #8D99A6;
+    color: @modal-header;
+    background-color: @chat-notification;
     display: inline-block;
     /* padding: 5px; */
     border-radius: 20px;
     opacity: 0.5;
     font-size: 10px;
     padding: 5px;
-    // background-color: white;
+    // background-color: @modal-header;
 }
