--- a/frappe/public/less/kanban.less
+++ b/frappe/public/less/kanban.less
@@ -48,7 +48,7 @@
 	}
 
 	.sortable-ghost > .kanban-card:not(.add-card) {
-		background: #ccc !important;
+		background: @kanban-card !important;
 		color: transparent;
 
 		* {
@@ -59,7 +59,7 @@
 	}
 
 	.kanban-card {
-		background-color: #fff;
+		background-color: @white;
 		box-shadow: 0 1px 3px rgba(0,0,0,0.30);
 		border-radius: 2px;
 		padding: 6px 6px 6px 8px;
