--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -246,7 +246,7 @@ body {
 			margin: 0px;
 			padding: 0px;
 			width: 100%;
-			background-color: #fff;
+			background-color: @modal-header;
 		}
 
 		.modal-content {
