--- a/frappe/public/less/tree.less
+++ b/frappe/public/less/tree.less
@@ -85,7 +85,7 @@ ul.tree-children {
 		left: -13px;
 		height: ~"calc(100% - 15px)";
 		width: 3px;
-		background: #fff;
+		background: @white;
 	}
 
 	&.opened > .tree-children > .tree-node > .tree-link::before {
