--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -1,26 +1,92 @@
 @brand-primary:			    #5e64ff;
 @erpnext-blue:			    #7575ff;
+
+//Text and Border
+@text-regular:			    14px;
+@text-medium:			    12px;
+@text-small:			    10px;
 @border-color:			    #d1d8dd;
+@text-extra-muted:		    #d1d8dd;
 @light-border-color:		#ebeff2;
 @text-color:			    #36414c;
 @text-light:			    #6c7680;
 @text-muted:			    #8d99a6;
-@btn-bg:			        #f0f4f7;
-@panel-bg:			        #f7fafc;
 @grey-link-color:		    #212a33;
+
+@btn-bg:			        #f0f4f7;
+
 @disabled-background:		#f2f5f7;
-@navbar-bg:			        #f5f7fa;
-@light-bg:			        #fafbfc;
+
+//Navbar
+@navbar-default-bg:         rgba(255, 255, 255, 0.9);
+@navbar-default-border:     rgba(54, 65, 76, 0.1);
+@navbar-default-color:	    #6c7680;
+@navbar-inverse-color:	    #9d9d9d;
+@navbar-search-bg:          rgba(255, 255, 255, 0.9);
+
+//Breadcrumb
+@breadcrumb-divider-color:  #c0c9d2;
+
+//Dropdown
+@dropdown-background:       #fff;
+@dropdown-border:           rgba(0, 0, 0, 0.14902);
+@dropdown-box-shadow:       rgba(0, 0, 0, .175);
+
+//Modal
 @modal-backdrop-bg:		    #334143;
+@modal-header:              #fff;
+
+//Desktop
+@page-desktop:              #4B4C9D;
+@circle-color:              #fff;
+@icon-hover:                #fff;
+@panel-bg:			        #f7fafc;
+@help-message-bg:           #fff;
+@help-progress-bg:          #fafbfc;
+@case-label-color:          #fff;
+
+@light-bg:			        #fafbfc;
 @light-yellow:			    #fffce7;
 @extra-light-yellow:		#fffdf4;
-@text-extra-muted:		    @border-color;
-@text-regular:			    14px;
-@text-medium:			    12px;
-@text-small:			    10px;
-@text-dark:                 #2e3338;
-@page-desktop:              #4B4C9D;
 
+@text-dark:                 #2e3338;
+
+@divider-color:             #d8dfe5;
+
+
+// Page
+@page-header:               #fff;
+
+//Setup Wizard
+@setup-wizard-lead:                 #777777;
+@setup-wizard-button:               #b1bdca;
+@setup-wizard-button-disbaled:      #fff;
+
+//Form
+@print-preview:             #f5f7fa;
+@sidebar-close:             #000;
+@disabled-input:            #f5f7fa;
+@goal-container-bg:         #fff;
+
+//Social
+@generic-card-bg:           #fff;
+@pinned-post:               #fefdf2;
+@post-action-container:     #F6F6F6;
+
+@badge-import:              #e74c3c;
+@kanban-card:               #ccc;
+@chat-notification:         #8D99A6;
+
+@white:                     @modal-header;
+@desk-progress:             #e5e7e9;
+@search-empty:              #d4d9dd;
+
+//Calender
+@calender-bg:               #cfdce5;
+@calender-border:           #E8DDFF;
+@calender-bg:               #fff;
+
+//Indicators
 @indicator-blue:		    #5e64ff;
 @indicator-red:			    #ff5858;
 @indicator-green:		    #98d85b;
@@ -30,12 +96,8 @@
 @indicator-yellow:		    #feef72;
 @indicator-light-blue:      #7cd6fd;
 @heart-color:			    @indicator-red;
-@navbar-default-color:	    #6c7680;
-@navbar-inverse-color:	    #9d9d9d;
-@navbar-default-bg:		    #f5f7fa;
-@navbar-default-border:	    #ebeff2;
-@breadcrumb-divider-color:  #c0c9d2;
 
+//Labels
 @label-primary-bg:		    #d9f6ff;
 @label-success-bg:		    #e4ffc1;
 @label-info-bg:			    #e8ddff;
@@ -43,10 +105,12 @@
 @label-danger-bg:		    #ffdcdc;
 @checkbox-color:		    #3b99fc;
 
+//Screen
 @screen-xs:			        767px;
 @screen-sm:			        991px;
 @screen-md:                 1199px;
 
+//Font
 @font-stack:                -apple-system, BlinkMacSystemFont,"Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell","Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
 /* palette colors*/
