--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -30,7 +30,7 @@
 @indicator-yellow:		    #feef72;
 @indicator-light-blue:      #7cd6fd;
 @heart-color:			    @indicator-red;
-@navbar-default-color:	    #6c7680;
+@navbar-default-color:	    #0080ff;
 @navbar-inverse-color:	    #9d9d9d;
 @navbar-default-bg:		    #f5f7fa;
 @navbar-default-border:	    #ebeff2;
@@ -80,3 +80,10 @@
 @skyblue-light:			    #aae3fe;
 @skyblue-extra-light:	    #d4f1ff;
 @skyblue-dark:			    #548da8;
+
+/* dark mode colors */
+@dark-primary-dark : rgba(33, 33, 33, 1);
+@dark-primary : rgba(48, 48, 48, 1);
+@dark-primary-light : rgba(66, 66, 66, 1);
+@dark-border : rgba(79, 79, 79, 1);
+@dark-text : white;
