--- a/frappe/public/less/desktop.less
+++ b/frappe/public/less/desktop.less
@@ -1,13 +1,3 @@
-@import "variables.less";
-
-@icon-color: @light-bg;
-@icon-hover: #fff;
-
-body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default {
-	background-color: rgba(255, 255, 255, 0.9);
-	border-color: rgba(54, 65, 76, 0.1);
-}
-
 #page-desktop {
 	min-width: 100%;
 	margin-top: 0px;
@@ -16,6 +6,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 	top: 0;
 	bottom: 0;
 	overflow: auto;
+	background-color: @page-desktop;
 }
 
 .case-wrapper {
@@ -30,7 +21,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 	font-size: 12px;
 	font-weight: bold;
 	letter-spacing: 0.4px;
-	color: #fff;
+	color: @case-label-color;
 	text-align: center;
 	margin-top: 10px;
 	transition: 0.2s;
@@ -51,7 +42,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 .app-icon .inner, .app-icon i {
 	font-size: 32px;
 	min-width: 32px;
-	color: @icon-color;
+	color: @light-bg;
 	display: inline-block;
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
@@ -103,7 +94,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 	position: absolute;
 	right: 20px;
 	top: -10px;
-	color: #fff;
+	color: @circle-color;
 	background-color: @indicator-red;
 	padding: 6px;
 	font-size: 12px;
@@ -270,7 +261,7 @@ body[data-route="desktop"] .navbar-set-desktop-icons {
 		text-align: left;
 	    margin: auto;
 	    max-width: 500px;
-	    background-color: #fff;
+	    background-color: @help-message-bg;
 	    padding: 10px 15px 15px 15px;
 	    border-radius: 3px;
 		box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
@@ -322,16 +313,11 @@ body[data-route="desktop"] .navbar-set-desktop-icons {
 		display: inline-block;
 		margin-left: 10px;
 		height: 4px;
-		background-color: @light-bg;
-	}
-	.help-progress {
-		display: inline-block;
-		margin-left: 10px;
-		height: 4px;
 		width: 100px;
-		background-color: @navbar-bg;
+		background-color: @light-bg;
 		border-radius: 2px;
 	}
+
 	.help-progress-bar {
 		display: inline-block;
 		height: 4px;
@@ -339,6 +325,4 @@ body[data-route="desktop"] .navbar-set-desktop-icons {
 		float: left;
 		border-radius: 2px;
 	}
-
 }
-
