--- a/frappe/public/less/indicator.less
+++ b/frappe/public/less/indicator.less
@@ -1,12 +1,10 @@
-@import "variables.less";
-
 .indicator,
 .indicator-right {
     background:none;
     font-size:12px;
     vertical-align:middle;
     font-weight:bold;
-    color:#6c7680;
+    color: @text-light;
 }
 
 .indicator::before,
