--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -190,7 +190,7 @@ body[data-route^="Module"] .main-menu {
 		    position: absolute;
 		    width: 100%; height:100%;
 		    top:0; left:0;
-		    background: #fff;
+		    background: @white;
 		    opacity: 0;
 		    transition: all 0.5s;
 		    -webkit-transition: all 0.6s;
@@ -292,7 +292,7 @@ body[data-route^="Module"] .main-menu {
 
 			.divider {
 				height: 1px;
-				background-color: #d8dfe5;
+				background-color: @divider-color;
 				opacity: 0.7;
 			}
 
@@ -333,7 +333,7 @@ body[data-route^="Module"] .main-menu {
 		top: 0;
 		right: 0;
 		opacity: 0.3;
-		background: #000;
+		background: @sidebar-close;
 		z-index: 1041;
 		height: 100%;
 		width: 100%;
