--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -38,7 +38,7 @@ li {
 }
 
 .navbar-default {
-	background-color: #fff;
+	background-color: @white;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
@@ -78,7 +78,7 @@ li {
 }
 
 .navbar-bg {
-	background-color: @navbar-bg;
+	background-color: @navbar-default-bg;
 }
 
 .navbar {
@@ -202,7 +202,7 @@ fieldset {
 	width: 100%;
 	height: 100%;
 	z-index: 1040;
-	background-color: #fff;
+	background-color: @white;
 	display: table;
 }
 .message-overlay .content {
