--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -3,21 +3,21 @@
 @import "common.less";
 @import "quill.less";
 
-@import "flex.less";//
-@import "indicator.less";//
-@import "avatar.less";//
-@import "navbar.less";//
+@import "flex.less";
+@import "indicator.less";
+@import "avatar.less";
+@import "navbar.less";
 @import "sidebar.less";
-@import "page.less";//
+@import "page.less";
 @import "tree.less";
-@import "desktop.less";//
-@import "form.less";//
+@import "desktop.less";
+@import "form.less";
 @import "mobile.less";
 @import "kanban.less";
 @import "controls.less";
 @import "chat.less";
 @import "filters.less";
-@import "social.less";//
+@import "social.less";
 
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
