--- a/frappe/public/less/kanban.less
+++ b/frappe/public/less/kanban.less
@@ -59,7 +59,7 @@
 	}
 
 	.kanban-card {
-		background-color: @white;
+		background-color: @kanban-card-bg;
 		box-shadow: 0 1px 3px rgba(0,0,0,0.30);
 		border-radius: 2px;
 		padding: 6px 6px 6px 8px;
