changed desktop background

--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -4,6 +4,9 @@
 * {
 	color: @dark-text ;
 }
+#page-desktop {
+	background-color: @dark-primary-dark;
+}
 /* Navbar and Dropdown */
 .navbar {
 	background-color: @dark-primary-light ;
