moved all static color to variables

--- a/frappe/public/less/awesomplete.less
+++ b/frappe/public/less/awesomplete.less
@@ -30,9 +30,9 @@
 		list-style: none;
 		padding: 0;
 		margin: 0;
-		background: #fff;
+		background: @awesomplete-ul-bg;
 		transition: none;
-		background-color: #fff;
+		background-color: @awesomplete-ul-bg;
 		max-height: 200px;
 		overflow-y: auto;
 		overflow-x: hidden;
