--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -84,15 +84,15 @@ hr {
 	border-radius: 3px;
 
 	&.btn-default {
-		color: #fff;
-		background-color: #f0f4f7;
+		color: @btn-color;
+		background-color: @btn-color-bg;
 		border-color: transparent;
 	}
 
 	&.btn-primary {
-		color: #fff;
+		color: @btn-color;
 		background-color: @brand-primary;
-		border-color: #444bff;
+		border-color: @btn-primary-border;
 	}
 }
 
