--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -35,7 +35,7 @@
 }
 
 .grid-body {
-	background-color: #fff;
+	background-color: @grid-body-bg;
 }
 
 .form-grid .data-row {
@@ -235,7 +235,7 @@
 }
 
 .form-in-grid {
-	background-color: white;
+	background-color: @from-in-grid-bg;
 	z-index: 1021;
 	position: relative;
 	overflow: hidden;
@@ -258,7 +258,7 @@
 }
 
 .grid-footer {
-	background-color: #fff;
+	background-color: @from-in-grid-footer-bg;
 }
 
 .grid-footer-toolbar {
@@ -282,4 +282,3 @@
 .grid-label {
 	margin-right: 8px; margin-bottom: 4px;
 }
-
