--- a/frappe/public/less/frappe-datatable.less
+++ b/frappe/public/less/frappe-datatable.less
@@ -80,7 +80,7 @@ table td.dt-cell {
 .dt-filter {
 	border: 1px solid @light-border-color;
 	border-radius: 3px;
-	background-color: #fff;
+	background-color: @dt-filter-bg;
 }
 
 .dt-tree-node__toggle + a {
