--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -235,7 +235,7 @@ input.list-check-all, input.list-row-checkbox {
 
 		&:hover {
 			padding: 2px 15px 2px 4px;
-			background: #cfdce5;
+			background: @taggle-list-hover;
 			transition: all .2s;
 		}
 	}
@@ -298,7 +298,7 @@ input.list-check-all, input.list-row-checkbox {
 
 	.image-view-row {
 		display: flex;
-		border-bottom: 1px solid #ebeff2;
+		border-bottom: 1px solid @image-view-row-border;
 	}
 
 	.image-view-item {
@@ -425,7 +425,7 @@ input.list-check-all, input.list-row-checkbox {
 }
 
 .pswp__bg {
-	background-color: #fff !important;
+	background-color: @pswp-bg !important;
 }
 
 .pswp__more-items {
