--- a/frappe/public/less/module.less
+++ b/frappe/public/less/module.less
@@ -118,7 +118,7 @@
 
 .module-item-progress-total {
 	height: 7px;
-	background-color: #999999;
+	background-color: @module-item-progress;
 	width: 0px;
 }
 
