--- a/frappe/public/less/role_editor.less
+++ b/frappe/public/less/role_editor.less
@@ -20,7 +20,7 @@ table.user-perm {
 table.user-perm td, table.user-perm th {
 	padding: 5px;
 	text-align: center;
-	border-bottom: 1px solid #aaa;
+	border-bottom: 1px solid @table-user-perm-border;
 	min-width: 30px;
 }
 
