--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -1,3 +1,4 @@
+//Erpnext
 @brand-primary:			    #5e64ff;
 @erpnext-blue:			    #7575ff;
 
@@ -12,6 +13,7 @@
 @text-light:			    #6c7680;
 @text-muted:			    #8d99a6;
 @grey-link-color:		    #212a33;
+@text-dark:                 #2e3338;
 
 @btn-bg:			        #f0f4f7;
 
@@ -49,13 +51,9 @@
 @light-yellow:			    #fffce7;
 @extra-light-yellow:		#fffdf4;
 
-@text-dark:                 #2e3338;
-
-@divider-color:             #d8dfe5;
-
-
 // Page
 @page-header:               #fff;
+@divider-color:             #d8dfe5;
 
 //Setup Wizard
 @setup-wizard-lead:                 #777777;
@@ -67,17 +65,63 @@
 @sidebar-close:             #000;
 @disabled-input:            #f5f7fa;
 @goal-container-bg:         #fff;
+@badge-import:              #e74c3c;
 
 //Social
 @generic-card-bg:           #fff;
 @pinned-post:               #fefdf2;
 @post-action-container:     #F6F6F6;
 
-@badge-import:              #e74c3c;
+//Common
+@link-disabled:             #888;
+@link-badge:                #d8dfe5;
+@freeze-bg-color:           #334143;
+
+//Docs
+@body-color:                #454e57;
+@code-color:                #e66a12;
+@code-bg-color:             #fff6df;
+@pre-bg-color:              #fafbfc;
+@pre-border-color:          #e1e9f0;
+@hljs-color:                #454e57;
+@navbar-link-color:         #fff;
+@breadcrumb-link:           #7575ff;
+@frappe-bird-bg:            #fff;
+@browser-img-border:        #d1d8dd;
+@fake-browser-frame:        #f5f7fa;
+@edit:                      #8d99a6;
+@current-td-code:           #454e57;
+
+//Email
+@btn-color:                 #fff;
+@btn-color-bg:              #f0f4f7;
+@btn-primary-border:        #444bff;
+
+//Form Grid
+@grid-body-bg:              #fff;
+@from-in-grid-bg:           #fff;
+@from-in-grid-footer-bg:    #fff;
+
+//Datatable
+@dt-filter-bg:              #fff;
+
+//List
+@taggle-list-hover:         #cfdce5;
+@image-view-row-border:     #ebeff2;
+@pswp-bg:                   #fff;
+
+//Module
+@module-item-progress:      #999999;
+
+//Role Editor
+@table-user-perm-border:    #aaa;
+
+//Website
+@page-card-bg-color:        #fff;
+@login-wrapper-border:      #f2f2f2;
+@badge-wrapper-color:       #7575ff;
 
 
-
-@white:                     @modal-header;
 @desk-progress:             #e5e7e9;
 @search-empty:              #d4d9dd;
 
@@ -133,6 +177,9 @@
 @calender-bg:               #cfdce5;
 @calender-border:           #E8DDFF;
 @calender-bg:               #fff;
+
+//Awesomplete
+@awesomplete-ul-bg:         #fff;
 
 //Indicators
 @indicator-blue:		    #5e64ff;
