--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -436,7 +436,7 @@ a.active {
 
 @media (min-width: 768px) {
 	.login-wrapper {
-		border-right: 1px solid #f2f2f2;
+		border-right: 1px solid @login-wrapper-border;
 	}
 }
 
@@ -611,7 +611,7 @@ li.footer-child-item {
 	padding: 2px 7px;
 	border: 1px solid @border-color;
 	border-radius: 3px;
-	color: #7575ff;
+	color: @badge-wrapper-color;
 	text-align:center;
 }
 
@@ -635,7 +635,7 @@ li.footer-child-item {
 	margin: 70px auto;
 	border: 1px solid @border-color;
 	border-radius: 4px;
-	background-color: #fff;
+	background-color: @page-card-bg-color;
 	box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 
 	.page-card-head {
